2007-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* FileCopy.cc, FileGlob.cc, HttpDir.cc, LocalAccess.cc, ftpclass.cc:
	  fixed constness for strchr, strrchr and strstr
	  (reported by Yann Rouillard <yann@pleiades.fr.eu.org>).

2007-12-12  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: workaround the case when transfer ends without data connection.

2007-12-12  Martin Nagy <mnagy@redhat.com>

	* FileCopy.cc: (GetPercentDoneStr) prevent buffer overflow.

2007-11-13  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: make most xstring methods return *this;
	  new function get_tmp(s,n).
	* misc.cc: use new get_tmp.
	* xmalloc.h: add ().

2007-11-12  Alexander V. Lukyanov <lav@yars.free.net>

	* xstring.cc, xstring.h: (get_tmp(const char*)) new function.
	* misc.cc: use it.
	* FileAccess.cc, FileAccess.h: optimize Log* methods.
	* MirrorJob.cc: count rm errors properly.

2007-11-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: don't reset timeout_timer all the time.
	* resource.cc: make ftp:use-stat-for-list off by default.

2007-11-03  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: (Log2) don't use %.*s (it mishandles invalid mb characters).
	* SleepJob.cc, SleepJob.h: repeat --weak new option.

2007-10-24  Alexander V. Lukyanov <lav@yars.free.net>

	* parsecmd.cc: don't accept incomplete comments.
	* CmdExec.cc: set slot name before ChangeSession (fixes a glitch).
	* ConnectionSlot.cc, ConnectionSlot.h: use FileAccessRef.
	* url.cc, FileAccess.cc: use const for FindSession result.

2007-10-18  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set prot='P' for ftps if PROT command fails.
	* IdNameCache.cc, IdNameCache.h: use Ref; use xstrcmp.

2007-10-15  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: handle timeouts when 150 reply is not received yet.

2007-10-13  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fix `wait all'.
